Migrated shade plugin to assembly plugin Ref#3